Spacing and #whatwedo corrections
Spacing for all page elements is now correct
#whatwedo now has vertically oriented project panels

--- a/bluowl.css
+++ b/bluowl.css
@@ -156,11 +156,30 @@ a:hover{color:inherit}
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-
     overflow-x: hidden;
-    height: 500px;
+    height: 550px;
     width: 100%;
     background-color: #FFFEF5;
+}
+
+#trapezoid-left {
+    margin-top: -110px;
+    float: left;
+    border-bottom: 100px solid #aeacba;
+    border-right: 175px solid transparent;
+    height: 0;
+    width: 50%;
+    margin-left: -175px;
+}
+
+#trapezoid-right {
+    margin-top: -110px;
+    float: right;
+    border-bottom: 100px solid #aeacba;
+    border-left: 175px solid transparent;
+    height: 0;
+    width: 50%;
+    margin-right: -175px;
 }
 
 
@@ -185,7 +204,7 @@ a:hover{color:inherit}
 
 
 #mainbody {
-    height: 2300px;
+    height: 2100px;
     width: 100%;
     background-color: white;
     margin-top: -40px;
@@ -194,12 +213,11 @@ a:hover{color:inherit}
 
 
 #whoweare {
-    padding-top: 100px;
-    height: 800px;
+    height: 900px;
     background-color: #aeacba;
+    padding-top: 10px;
 }
 #whoweare h1 {
-    margin-top: -70px;
     font: 50px 'LaneUpperRegular', Arial, sans-serif;
     letter-spacing: 0;
     text-align: center;
@@ -231,7 +249,7 @@ a:hover{color:inherit}
 .whoweare-pic-container {
     height: 200px;
     width: 100%;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 .whoweare-pic-container-inner {
@@ -302,7 +320,7 @@ a:hover{color:inherit}
 
 
 #whatwedo {
-    height: 850px;
+    height: 650px;
     background-color: #0f75bc;
 }
 #whatwedo h1 {
@@ -322,69 +340,50 @@ a:hover{color:inherit}
     border-color: #0f75bc transparent transparent transparent;
 }
 .project-pic-container {
-    height: 200px;
+    height: 850px;
     width: 100%;
     margin-top: 60px;
 }
 .project-pic-container-inner {
-    height: 200px;
-    width: 660px;
+    height: 850px;
+    width: 930px;
     margin-right: auto;
     margin-left: auto;
 }
-.project-pic-left {
+.project-pic-container-inner-inner {
     float: left;
+    height: 850px;
+    width: 300px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.project-pic {
+    margin-left: auto;
+    margin-right: auto;
     height: 200px;
     width: 200px;
     background-image:url('adhesion.png');
 }
-.project-pic-right {
-    float: right;
-    height: 200px;
-    width: 200px;
-    background-image:url('adhesion.png');
-}
-.project-text-left {
-    float: left;
-    height: 200px;
-    width: 440px;
+.project-text {
+    margin-top: 20px;
+    height: 650px;
+    width: 300px;
     font-family: 'Open Sans', sans-serif;
     font-size: 20px;
     margin-right: 20px;
 }
-.project-text-right {
-    float: right;
-    height: 200px;
-    width: 440px;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 20px;
-    margin-left: 20px;
-}
-.project-text-right h1 {
-    margin-top: 0 !important;
-    margin-bottom: 0 !important;
-    text-align: left !important;
-    font-family: 'Open Sans', sans-serif !important;
-    font-size: 25px !important;
-}
-.project-text-right hr {
+.project-text hr {
     margin-top: 0;
     border: 0;
     height: 1px;
     background: #333 !important;
 }
-.project-text-left h1 {
+.project-text h1 {
     margin-top: 0 !important;
     margin-bottom: 0 !important;
     text-align: left !important;
     font-family: 'Open Sans', sans-serif !important;
     font-size: 25px !important;
-}
-.project-text-left hr {
-    margin-top: 0;
-    border: 0;
-    height: 1px;
-    background: #333 !important;
 }
 
 #whatwedo hr {
